--- a/12.db/1.sqlite/docker-compose.yml
+++ b/12.db/1.sqlite/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 services:
     sqlite3:
         image: keinos/sqlite3:3.40.1
-        stdin_open: true
         tty: true
         volumes:
-            - ./db/:/root/db/
+            - ./db/:/workspace
